--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 #dodger {
-  background-color: white;
+  background-color: red;
   height: 20px;
   position: absolute;
-  width: 40px;
+  width: 20px;
 }
 
 #game {
